fix background stretching

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@
   z-index: -1;
   background-image: url(background_flipped.png);
   opacity: .3;
-  background-size: cover;
 }
 
 .logo-home {
